<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title_label" 
        style="?android:listSeparatorTextViewStyle"/>
    
    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/reminder_title_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_details_label"
        style="?android:listSeparatorTextViewStyle" />

    <Button
        android:id="@+id/reminder_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <CheckBox
        android:id="@+id/reminder_reminded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/reminder_remind_label"
        android:button="@null"
        android:background="@null"
        android:drawableLeft="@drawable/custom_checkbox_design"
        android:gravity="center_vertical"/>
	
</LinearLayout>
