<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/background" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/back"
        android:measureWithLargestChild="true"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="4dp"
                android:text="@string/app_name"
                android:textSize="24sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/dialog_remindersListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:divider="?android:attr/listDivider" >

        </ListView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" >

            <Button
                android:id="@+id/snoozeButton"
                android:layout_width="72dp"
                android:layout_height="36dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/stop_button_design"
                android:text="@string/snooze_title"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="72dp"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/stop_button_design"
                android:text="@string/stop_title"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>